--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -5,12 +5,12 @@ foreignObject .rich-text {
   white-space: pre-wrap;
   font-family: sourcesanspro;
 
-
   div {
     line-height: inherit;
+    user-select: all;
   }
+
   span {
     line-height: inherit;
   }
-
 }
