--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -13,29 +13,49 @@ foreignObject {
     span {
       line-height: inherit;
     }
+  }
 
-    .paragraph-set, .DraftEditor-root {
+  .text-editor {
+    .DraftEditor-root {
       height: 100%;
       display: flex;
       flex-direction: column;
     }
 
     &.align-top {
-      .paragraph-set, .DraftEditor-root {
+      .DraftEditor-root {
         justify-content: flex-start;
       }
     }
 
     &.align-center {
-      .paragraph-set, .DraftEditor-root {
+      .DraftEditor-root {
         justify-content: center;
       }
     }
 
     &.align-bottom {
-      .paragraph-set, .DraftEditor-root {
+      .DraftEditor-root {
         justify-content: flex-end;
       }
+    }
+  }
+
+  .rich-text .paragraphs {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    &.align-top {
+      justify-content: flex-start;
+    }
+
+    &.align-center {
+      justify-content: center;
+    }
+
+    &.align-bottom {
+      justify-content: flex-end;
     }
   }
 }
