--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -7,7 +7,7 @@ foreignObject {
 
     div {
       line-height: inherit;
-      user-select: all;
+      user-select: text;
     }
 
     span {
@@ -59,3 +59,4 @@ foreignObject {
     }
   }
 }
+
